Fixed broken description Links + vertical align text

--- a/css/main.css
+++ b/css/main.css
@@ -492,6 +492,8 @@ img.supportLink:hover {
 }
 
 #supportDescription {
+    display: flex;
+    align-items: center;
     width: 100%;
     height: 200px;
     margin: auto;
